# libwasm

./: .gitignore  README.md
src/: CMakeLists.txt  compiler_bridges.h
src/lib/: BuiltinFunctions.h  CMakeLists.txt  Exceptions.h  ExecutionControlBlock.h  ExpressionService.cpp  ExpressionService.h  JitWriter.cpp  JitWriter.h  WasmContext.cpp  WasmContext.h  numeric_cast.h  rt_callbacks.cpp  safe_access.cpp  safe_access.h  sal_stubs.h  stdafx.h  wasm_types.h
src/lib/layer/: layer.h
src/lib/layer/posix/: .optemplates.asm.swp  optemplates.asm  pagealloc.cpp
src/lib/layer/win32/: optemplates.asm  pagealloc.cpp
src/runtime/: CMakeLists.txt  main.cpp  stdafx.h
src/testhost/: CMakeLists.txt  testhost.cpp
test/scripts/: compile_tests.py
test/spec_tests/: conversions.wast  func_ptrs.wast  run.py  start.wast
