cmake_minimum_required (VERSION 3.7 FATAL_ERROR)
project(libwasm VERSION 0.1 LANGUAGES CXX)
set(CMAKE_GENERATOR_PLATFORM x64)
IF( CMAKE_SIZEOF_VOID_P EQUAL 8 )
ELSE()
	message( FATAL_ERROR "libwasm supports X64 only" )
ENDIF()

if(WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /WX")
ELSE()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-switch")
ENDIF()

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_subdirectory(lib)
add_subdirectory(runtime)
add_subdirectory(testhost)
